--- a/style.css
+++ b/style.css
@@ -1,181 +1,207 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    background-color: antiquewhite;
+
+body {
+  background-color: antiquewhite;
 }
-h1, h2{
-    text-align: center;
+
+.article-inicial {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  position: relative;
+  padding: 50px;
+  background-color: brown;
+  top: 100px;
+  width: 100%;
 }
-article{
-    position: absolute;
-    padding: 50px;
-    background-color: brown;
-    top: 100px;
+
+.artigos {
+  display: flex;
+  margin: 10px;
 }
-#cabecalho{
-    position:fixed;
-    z-index: 1;
-    background-color: gray;
-    width: 100%;
+
+.title {
+  text-align: center;
+  padding: 10px;
 }
+
+.cabecalho {
+  position:fixed;
+  padding: 20px;
+  z-index: 1;
+  background-color: gray;
+  width: 100%;
+}
+
+.link-cabecalho {
+  display: flex;
+  flex-direction: ;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+li {
+  list-style: none;
+}
+
+.tagA {
+  color: black;
+  text-decoration: none;
+}
+
 .lado-esquerdo {
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-    top: 500px;
-    margin: 30px;
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  top: 500px;
+  margin: 30px;
 }
+
 .lado-esquerdo:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
 .container {
-    padding: 2px 16px;
+  max-width: 100%;
 }
-.lado-direito{
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-    top: 500px;
-    left: 30%;
-    margin: 30px;
+
+.lado-direito {
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  top: 500px;
+  left: 30%;
+  margin: 30px;
 
 }
+
 .lado-direito:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
 .container-dois {
-    padding: 2px 16px;
+  padding: 2px 16px;
 }
 
 .card-um {
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-    top: 1000px;
-    margin: 30px;
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  top: 1000px;
+  margin: 30px;
 }
+
 .card-um:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
 .container-tres {
-    padding: 2px 16px;
+  padding: 2px 16px;
 }
-.card-dois{
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-    top: 1000px;
-    left: 30%;
-    margin: 30px;
+
+.card-dois {
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  top: 1000px;
+  left: 30%;
+  margin: 30px;
 }
+
 .card-dois:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
 .container-quatro {
-    padding: 2px 16px;
+  padding: 2px 16px;
 }
-
-
-
 
 .card-tres {
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-    top: 1500px;
-    margin: 30px;
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  top: 1500px;
+  margin: 30px;
 }
+
 .card-um:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
 .container-cinco {
-    padding: 2px 16px;
+  padding: 2px 16px;
 }
-.card-quatro{
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-    top: 1500px;
-    left: 30%;
-    margin: 30px;
+
+.card-quatro {
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  top: 1500px;
+  left: 30%;
+  margin: 30px;
 }
+
 .card-dois:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
 .container-seis {
-    padding: 2px 16px;
+  padding: 2px 16px;
 }
-#campo-aside{
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    height: 120%;
-    top: 1100px;
-    left: 60%;
-    background-color: yellow;
-    margin: 0px;
-    padding: 20px;
+
+.campo-aside {
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  height: 120%;
+  top: 1100px;
+  left: 60%;
+  background-color: yellow;
+  margin: 0px;
+  padding: 20px;
 }
-.card-autor{
-    position: absolute;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-    top: 500px;
-    margin: 30px;
-    padding: 20px;
-    left: 70%;
+
+.card-autor {
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  top: 500px;
+  margin: 30px;
+  padding: 20px;
+  left: 70%;
 }
-.navegacao ul{
-    padding:20px;
-    margin:0px;
-    background-color:gray;
-    list-style:none;
-    text-align: center;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+
+.rodape {
+  position: absolute;
+  top: 2000px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+  background-color: aqua;
 }
-.navegacao ul li{
-    display: inline;
-    border: 1px solid palevioletred;
-}
-.navegacao ul li a{
-    padding: 2px 10px;
-    display: inline-block;
-    background-color:gray;
-    color: #333;
-    text-decoration: none;
-    border-bottom:3px solid palevioletred;
-}
-.navegacao ul li a:hover {
-    background-color:pink;
-    color: blue;
-    border-bottom:3px solid palegreen;
-}
-#rodape{
-    position: absolute;
-    
-    top: 2000px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 100%;
-    background-color: aqua;
-    
-}
+
 table, th, td {
-    border: 1px solid black;
-    margin: 40px;
-    
+  border: 1px solid black;
+  margin: 40px;
 }
+
 th {
-    background-color: grey;
+  background-color: grey;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    background-color: blue;
+  }
 }
