--- a/style.css
+++ b/style.css
@@ -59,15 +59,15 @@
   flex-direction: column;
   text-align: center;
   background-color: chartreuse;
-  margin: 20px;
+  margin: 10px;
+  padding: 20px;
 }
 
-.card-autor-desenhista {
-  display: block;
-  width: 500px;
-  padding: 10px;
-  justify-content: center;
+.img-criadores {
+  padding: 20px;
 }
+
+
 
 /*.video {
   padding: 20px;
@@ -276,6 +276,7 @@
 
   .cabecalho {
     background-color: lightcoral;
+    top: 0px;
   }
 
   /* .coluna {
