--- a/style.css
+++ b/style.css
@@ -113,171 +113,69 @@
   overflow: hidden;
   padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
-
-/* .quadrinhos {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
-  padding: 20px;
-
+/*---------------------------------*/
+ .titulo-quadrinhos {
+  text-align: center;
 }
 
 .imagens-cards {
-  display: flex;
-  justify-content: space-around;
+  display: block;
+  justify-content: center;
   padding: 40px;
 }
 
-.lado-esquerdo-1 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 500px;
+.imagens-cards img {
+  margin: 20px;
 }
-
-.lado-esquerdo-1:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.lado-direito-1 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 500px;
-}
-
-.lado-direito-1:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.lado-esquerdo-2 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 1000px;
-}
-
-.lado-esquerdo-2:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.lado-direito-2 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 1000px;
-}
-
-
-.lado-direito-2:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.lado-esquerdo-3 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 1500px;
-}
-
-.lado-esquerdo-3:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.lado-direito-3 {
-  box-shadow: 0 4px 16px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 1500px;
-}
-
-.lado-direito-3:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.lado-esquerdo-4 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 2500px;
-}
-
-.lado-esquerdo-4:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.lado-direito-4 {
-  box-shadow: 0 4px 16px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 2500px;
-}
-
-.lado-direito-4:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.meio-pagina {
-  box-shadow: 0 4px 16px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  top: 2500px;
-}
-
-.meio-pagina:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
+/*---------------------------------*/
 
 .campo-aside {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: yellow;
-
+  margin: 20px;
+  padding: 20px;
+  background-color: turquoise;
 }
 
 .titulo-aside-ingles {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: yellow;
   width: 100%;
+  padding: 20px;
+  margin: 20px;
+  border: 1px solid;
+  background-color: turquoise;
 }
 
 .link-aside {
   display: flex;
-  justify-content: space-between;
-  padding: 5px;
+  flex-direction: column;
+  padding: 20px;
   width: 100%;
-  margin: 10px;
+  margin: 20px;
 }
 
 .tag-li-2 {
   list-style: none;
-  margin: 10px;
 }
-
-
-.section-tabela {
-  margin: 30px;
-}
+/*---------------------------------*/
 
 .titulo-tabela {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
 }
 
-.tabela {
+/* .tabela {
   border: 1px solid #ddd;
   text-align: left;
   border-collapse: collapse;
   width: 100%;
-}
+} */
 
-.th {
+/* .th {
   border: 1px solid #ddd;
   text-align: left;
   padding: 15px;
@@ -287,7 +185,7 @@
   border: 1px solid #ddd;
   text-align: left;
   padding: 15px;
-}
+} */
 
 .achecker{
   display: flex;
@@ -302,11 +200,41 @@
   flex-direction: column;
   align-items: center;
   background-color: gray;
-} */
+}
+
+@media screen and (min-width: 569px) and (max-width: 799px) {
+  .centro {
+    background-color: darkgoldenrod;
+  }
+
+  .imagens-cards img {
+    display: flex;
+    flex-direction: row;
+    float: left;
+    justify-content: center;
+    align-content: center;
+    width: 200px;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .centro {
+    background-color: blue;
+  }
+
+  .imagens-cards img {
+    display: block;
+    float: left;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin: 20px;
+    width: 450px;
+  }
+}
 
  @media screen and (min-width:320px) and (max-width: 568px) {
   .centro {
-    background-color: yellow;
     border: 5px solid;
     display: flex;
     flex-direction: column;
@@ -318,6 +246,25 @@
     top: 0px;
   }
 
+  .quadrinhos {
+    display: block;
+    flex-direction: column;
+  }
+
+  .imagens-cards {
+    display: block;
+    flex-dire ction: column;
+  }
+
+  .lado-esquerdo {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+
+  .lado-direito {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
   /* .coluna {
     width: 100%;
   } */
