--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
 }
 
 .centro {
-  background-color: violet;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  background-color: #ffd149
+
+  ;
 }
 
  .cabecalho {
@@ -17,14 +19,17 @@
   justify-content: center;
   z-index: 1;
   padding: 10px;
-  background-color: cadetblue;
+  background-color: #c67100;
+
+  ;
 }
 
 .navegacao {
   display: block;
   width: 100%;
-  background-color: cadetblue;
+  background-color: #ffa000
 
+  ;
 }
 
 .teste {
@@ -32,8 +37,7 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  margin-top: 80px;
-  border: 2px solid greenyellow;
+  margin-top: 100px;
 }
 
 .tag-li {
@@ -44,22 +48,20 @@
   text-decoration: none;
   color: black;
 }
-/*---------------------------------*/
+
 .article-inicial {
   display: block;
   flex-wrap: wrap;
   flex-direction: column;
-  background-color: blueviolet;
-  border: 2px solid red;
+  margin-top: 20px;
 }
-/*-----------------------------------*/
+
 .sessao-artigo {
   margin-top: 20px;
   display: block;
   flex-direction: column;
   text-align: center;
-  background-color: chartreuse;
-  margin: 10px;
+  margin: 20px;
   padding: 20px;
 }
 
@@ -82,7 +84,6 @@
   padding: 8px;
   text-align: left;
   border: 1px solid #ddd;
-  background-color: coral;
 }
 
 .td {
@@ -95,7 +96,6 @@
   background-color:#f5f5f5;
 }
 
-/*-----------------------------*/
 .responsive-iframe {
   position: absolute;
   top: 0;
@@ -113,29 +113,29 @@
   overflow: hidden;
   padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
-/*---------------------------------*/
+
  .titulo-quadrinhos {
   text-align: center;
 }
 
 .imagens-cards {
   display: block;
-  justify-content: center;
-  padding: 40px;
+  flex-direction: row;
+  text-align: center;
+  padding: 10px;
 }
 
 .imagens-cards img {
   margin: 20px;
+  width: 300px;
 }
-/*---------------------------------*/
 
 .campo-aside {
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   margin: 20px;
   padding: 20px;
-  background-color: turquoise;
 }
 
 .titulo-aside-ingles {
@@ -146,7 +146,6 @@
   padding: 20px;
   margin: 20px;
   border: 1px solid;
-  background-color: turquoise;
 }
 
 .link-aside {
@@ -160,32 +159,12 @@
 .tag-li-2 {
   list-style: none;
 }
-/*---------------------------------*/
 
 .titulo-tabela {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-/* .tabela {
-  border: 1px solid #ddd;
-  text-align: left;
-  border-collapse: collapse;
-  width: 100%;
-} */
-
-/* .th {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 15px;
-}
-
-.td {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 15px;
-} */
 
 .achecker{
   display: flex;
@@ -196,31 +175,71 @@
 .rodape {
   width: 100%;
   display: flex;
-
+  background-color: #aeaeae;
   flex-direction: column;
   align-items: center;
-  background-color: gray;
 }
 
 @media screen and (min-width: 569px) and (max-width: 799px) {
   .centro {
-    background-color: darkgoldenrod;
+    background-color: #e0e0e0;
+  }
+
+  .imagens-cards {
+    padding-left: 150px;
+    padding-right: 150px;
   }
 
   .imagens-cards img {
-    display: flex;
-    flex-direction: row;
+    display: block;
+    flex-direction: column;
     float: left;
-    justify-content: center;
+    padding: 20px;
+    margin: 20px;
     align-content: center;
-    width: 200px;
+    width: 350px;
   }
 }
 
 @media screen and (min-width: 800px) {
   .centro {
-    background-color: blue;
+    background-color: #e0e0e0;
   }
+  .imagens-cards {
+    padding-left: 400px;
+    padding-right: 400px;
+    border: 2px solid;
+  }
+
+  .responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+
+  .container-video {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  iframe {
+    display: inline-flex;
+    width: 30%;
+    height: 30%;
+    margin: 20px;
+    flex-direction: row;
+    justify-content: center;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 200px;
+  }
+
 
   .imagens-cards img {
     display: block;
@@ -231,6 +250,20 @@
     margin: 20px;
     width: 450px;
   }
+
+  .img-criadores {
+    width: 600px;
+  }
+
+  .article-inicial {
+    padding-left: 300px;
+    padding-right: 300px;
+  }
+
+  .campo-aside {
+    padding-left: 500px;
+    padding-right: 500px;
+  }
 }
 
  @media screen and (min-width:320px) and (max-width: 568px) {
@@ -239,50 +272,20 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    background-color:#e0e0e0;
   }
 
   .cabecalho {
-    background-color: lightcoral;
+    background-color: #ffd149
+
+    ;
     top: 0px;
   }
 
-  .quadrinhos {
-    display: block;
-    flex-direction: column;
-  }
-
   .imagens-cards {
-    display: block;
-    flex-dire ction: column;
+    display: inline-block;
+    flex-direction: row;
+    padding-left: 40px;
+    padding-right: 40px;
   }
-
-  .lado-esquerdo {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-
-  .lado-direito {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  /* .coluna {
-    width: 100%;
-  } */
-  /* .cabecalho {
-    position:fixed;
-    display: flex;
-    z-index: 1;
-    justify-content: center;
-    padding: 20px;
-    width: 100%;
-    background-color: gray;
-  }
-
-  .link-cabecalho {
-    display: flex;
-    width: 100%;
-    margin-top: 65px;
-    background-color: yellowgreen;
-
-  } */
 }
