--- a/style.css
+++ b/style.css
@@ -1,43 +1,55 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-.centro {
+#body {
+  background-color: mintcream;
+  margin: 0;
+}
+
+#container {
+  border: 2px solid chartreuse;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  background-color: #ffd149
-
-  ;
 }
 
- .cabecalho {
-  position:fixed;
+#cabecalho {
+  background-color: black;
+  border: 3px solid chartreuse;
+  color: white;
   display: flex;
-  width: 100%;
   justify-content: center;
-  z-index: 1;
+  margin-top: -2px;
   padding: 10px;
-  background-color: #c67100;
-
-  ;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .navegacao {
-  display: block;
-  width: 100%;
-  background-color: #ffa000
+  background-color: black;
+  border: 2px solid chartreuse;
+  overflow: hidden;
+}
 
-  ;
+.navegacao a {
+  border: 2px solid chartreuse;
+  color: gainsboro;
+  display: block;
+  float: left;
+  text-align: center;
+  text-decoration: none;
 }
 
 .teste {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 100%;
   margin-top: 100px;
+  width: 100%;
 }
 
 .tag-li {
@@ -45,34 +57,63 @@
 }
 
 .tag-li a {
-  text-decoration: none;
-  color: black;
-}
-
-.article-inicial {
-  display: block;
-  flex-wrap: wrap;
-  flex-direction: column;
-  margin-top: 20px;
-}
-
-.sessao-artigo {
-  margin-top: 20px;
-  display: block;
-  flex-direction: column;
+  color: white;
+  display: inline-flex;
+  justify-content: center;
   text-align: center;
-  margin: 20px;
-  padding: 20px;
+  text-decoration: none;
+  padding: 14px 16px;
 }
+
+.tag-li:hover {
+  background-color: chartreuse;
+  color: black;
+  text-decoration: none;
+}
+
+.row:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.lado-esquerdo {
+  float: left;
+  padding: 100px;
+  text-align: center;
+}
+
+.lado-esquerdo.middle {
+  width: 50%;
+}
+
+.paragrafo {
+  text-align: justify;
+  text-indent: 80px;
+}
+
+/* .sessao-artigo {
+  display: block;
+  flex-direction: column;
+  margin: 20px;
+  margin-top: 20px;
+  padding: 20px;
+  text-align: center;
+} */
 
 .img-criadores {
   padding: 20px;
 }
 
 .titulo-tabela {
+  align-items: center;
+  border: 2px solid;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  height: auto;
   padding: 20px;
   width: 100%;
-  height: auto;
 }
 
 .tabela {
@@ -81,211 +122,141 @@
 }
 
 .th {
+  background-color: darkseagreen;
+  border: 1px solid;
   padding: 8px;
-  text-align: left;
-  border: 1px solid #ddd;
+  text-align: center;
 }
 
 .td {
+  background-color: gainsboro;
+  border: 1px solid;
   padding: 8px;
-  text-align: left;
-  border: 1px solid #ddd;
+  text-align: center;
 }
 
 .tr:hover {
-  background-color:#f5f5f5;
+  background-color: chartreuse;
 }
 
-.responsive-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
+/* .responsive-iframe {
   border: none;
-}
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+} */
 
-.container-video {
+/* .container-video {
+  overflow: hidden;
+  padding-top: 56.25%;
   position: relative;
   width: 100%;
-  overflow: hidden;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
-}
-
- .titulo-quadrinhos {
-  text-align: center;
-}
-
+} */
 .imagens-cards {
-  display: block;
-  flex-direction: row;
-  text-align: center;
-  padding: 10px;
+  margin-top: 100px;
 }
 
-.imagens-cards img {
+.titulo-quadrinhos {
+  text-align: center;
+}
+
+img {
   margin: 20px;
   width: 300px;
 }
 
-.campo-aside {
-  display: block;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px;
-  padding: 20px;
+.lado-direito {
+  animation: myAnimation 5s infinite;
+  animation-direction: alternate;
+  padding: 40px;
 }
 
 .titulo-aside-ingles {
+  align-items: center;
+  border: 2px solid;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-  padding: 20px;
   margin: 20px;
-  border: 1px solid;
+  padding: 20px;
+  width: 100%;
 }
 
 .link-aside {
+  animation: myAnimation 5s infinite;
+  animation-direction: alternate;
   display: flex;
   flex-direction: column;
+  font-size: 20px;
+  margin: 20px;
   padding: 20px;
   width: 100%;
-  margin: 20px;
 }
 
 .tag-li-2 {
   list-style: none;
 }
 
-.titulo-tabela {
-  display: flex;
+#rodape {
+  background-color: black;
+  border: 2px solid chartreuse;
+  color: chartreuse;
   flex-direction: column;
-  align-items: center;
-}
-
-.achecker{
-  display: flex;
-  justify-content: center;
-  margin: 5px;
-}
-
-.rodape {
+  text-align: center;
   width: 100%;
-  display: flex;
-  background-color: #aeaeae;
-  flex-direction: column;
-  align-items: center;
 }
 
-@media screen and (min-width: 569px) and (max-width: 799px) {
-  .centro {
-    background-color: #e0e0e0;
-  }
+@media screen and ( max-width : 600px ) {
 
-  .imagens-cards {
-    padding-left: 150px;
-    padding-right: 150px;
-  }
-
-  .imagens-cards img {
-    display: block;
-    flex-direction: column;
-    float: left;
-    padding: 20px;
-    margin: 20px;
-    align-content: center;
-    width: 350px;
-  }
-}
-
-@media screen and (min-width: 800px) {
-  .centro {
-    background-color: #e0e0e0;
-  }
-  .imagens-cards {
-    padding-left: 400px;
-    padding-right: 400px;
-    border: 2px solid;
-  }
-
-  .responsive-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+  .lado-esquerdo.middle {
     width: 100%;
+  }
+
+  .lado-direito.side {
+    width: 100%;
+  }
+
+  /* .responsive-iframe {
     height: 100%;
-    border: none;
-  }
-
-  .container-video {
-    position: relative;
     width: 100%;
-    overflow: hidden;
+  } */
+}
+
+@media screen and ( min-width : 601px ) {
+
+  p {
+    font-size: 20px;
   }
 
-  iframe {
-    display: inline-flex;
-    width: 30%;
-    height: 30%;
-    margin: 20px;
-    flex-direction: row;
-    justify-content: center;
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-bottom: 200px;
+  .lado-esquerdo.middle {
+    width: 100%;
   }
 
-
-  .imagens-cards img {
-    display: block;
-    float: left;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
-    width: 450px;
+  .lado-direito.side {
+    width: 100%;
   }
 
   .img-criadores {
-    width: 600px;
+    width: 50%;
   }
 
-  .article-inicial {
-    padding-left: 300px;
-    padding-right: 300px;
-  }
-
-  .campo-aside {
-    padding-left: 500px;
-    padding-right: 500px;
+  .lado-esquerdo {
+    width: 100%;
   }
 }
 
- @media screen and (min-width:320px) and (max-width: 568px) {
-  .centro {
-    border: 5px solid;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    background-color:#e0e0e0;
+@keyframes myAnimation {
+
+  0% {
+    background-color: mediumseagreen;
   }
 
-  .cabecalho {
-    background-color: #ffd149
-
-    ;
-    top: 0px;
+  50% {
+    background-color: indianred;
   }
 
-  .imagens-cards {
-    display: inline-block;
-    flex-direction: row;
-    padding-left: 40px;
-    padding-right: 40px;
+  100% {
+    background-color: tomato;
   }
 }
